# gen-ai-fsms

./: .gitignore  LICENSE  Procfile  Procfile.api  Procfile.backend  Procfile.frontend  README.md  alembic.ini  conftest.py  migrate_all.ps1  pyproject.toml  pytest.ini  requirements.txt  run.sh  setup.py
.github/ISSUE_TEMPLATE/: question---support.md
alembic/: env.py
alembic/versions/: 0cfdc5821820_add_password_reset_token_table.py  0d87adab5ba6_add_business_profile_ownership_to_users.py  13dcf814299c_require_business_profile_ownership_for_.py  485c791bb30e_empty_initial_revision.py  62b9dd1f19bb_add_user_table.py  8136aaf8b524_add_onboarding_sessions_table.py  b7496536fc29_add_access_token_version_to_users.py  ccffbbfb60fc_add_on_delete_cascade_to_password_reset_.py  d6a4036401fd_require_site_name_for_business_profiles.py  ec39d923658d_add_test_record_table.py  f50b0a6c43e2_add_onboarding_models.py  f82243724555_drop_parent_condition_id_from_conditions.py
data/: sfbb_chilling_cooking.json
docs/architecture/: technology_stack.md
docs/data-model/: conceptual_design.md  logical_design.md
docs/sfbb/: sfbb-compiled.md
frontend/: api_client.py  app.py  shared.py
frontend/pages/: dashboard.py  login.py  profile.py  register.py
frontend/views/: admin.py  dashboard.py  forgot.py  login.py  onboarding_screening.py  profile.py  register.py  reset_password.py
gen_ai_fsms/: main.py
gen_ai_fsms/ai/: adapter.py
gen_ai_fsms/api/: deps.py
gen_ai_fsms/db/: base.py  session.py
scripts/: demote_to_user.py  promote_to_admin.py
tests/: test_db.py  test_dev_database.py  test_test_database.py
(+37 files in other folders)
